--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@ name: Bertrand Martin
 description: # this means to ignore newlines until "baseurl:"
   Engineering Student.
 keywords: [Your keywords]
-baseurl: "/Jekyll_Blog" # the subpath of your site, e.g. /blog
-url: "https://domergan.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://domergan.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 domain: "example.com" # the domain name for your site, e.g. example.com
 language: en
 # Supported languages list:
