--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ description: # this means to ignore newlines until "baseurl:"
   Engineering Student.
 keywords: [Your keywords]
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://domergan.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://domergan.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 domain: "example.com" # the domain name for your site, e.g. example.com
 language: en
 # Supported languages list:
